# trash

./: Cargo.toml  README.md  makefile
src/: bases.rs  buildins.rs  commander.rs  doc.rs  inputer.rs  interprete.rs  main.rs  mixios.rs  trash.pest
test/: out  test.sh
