[package]
name = "trash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
ansi_term = "0.6.3"
users = "0.11.0"
ctrlc = "3.2.0"
chrono = "0.2.16"
libc = "0.2"
parse_int = "0.5.0"